# kmcpclientinspector

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  config-kmcpclientinspector.h.in  sanitizers.supp
src/: CMakeLists.txt  Messages.sh
src/apps/: CMakeLists.txt  kmcpclientinspector.qrc  main.cpp
src/apps/autotests/: CMakeLists.txt
src/core/: CMakeLists.txt  kmcpclientinspectorclientprotocolmanager.cpp  kmcpclientinspectorclientprotocolmanager.h  kmcpclientinspectorcommandlineparser.cpp  kmcpclientinspectorcommandlineparser.h  kmcpclientinspectormanager.cpp  kmcpclientinspectormanager.h
src/core/autotests/: CMakeLists.txt  kmcpclientinspectorcommandlineparsertest.cpp  kmcpclientinspectorcommandlineparsertest.h
src/data/: org.kde.kmcpclientinspector.appdata.xml  org.kde.kmcpclientinspector.desktop  org.kde.kmcpclientinspector.desktop.license
src/widgets/: CMakeLists.txt  kmcpclientinspectorcentralwidget.cpp  kmcpclientinspectorcentralwidget.h  kmcpclientinspectorconnectbuttonswidget.cpp  kmcpclientinspectorconnectbuttonswidget.h  kmcpclientinspectormainwindow.cpp  kmcpclientinspectormainwindow.h  kmcpclientinspectorserversettingswidget.cpp  kmcpclientinspectorserversettingswidget.h  kmcpclientinspectortabpage.cpp  kmcpclientinspectortabpage.h  kmcpclientinspectortabwidget.cpp  kmcpclientinspectortabwidget.h  kmcpclientinspectortreeview.cpp  kmcpclientinspectortreeview.h  kmcpclientinspectorui.rc  kmcpclientinspectorwidgets.qrc  libkmcpclientinspectorwidgets_private_export.h
src/widgets/actions/: kmcpclientinspectoractiontabpagebase.cpp  kmcpclientinspectoractiontabpagebase.h  kmcpclientinspectoractiontabwidget.cpp  kmcpclientinspectoractiontabwidget.h  kmcpclientinspectorlistpromptswidget.cpp  kmcpclientinspectorlistpromptswidget.h  kmcpclientinspectorlisttoolswidget.cpp  kmcpclientinspectorlisttoolswidget.h  kmcpclientinspectorpingwidget.cpp  kmcpclientinspectorpingwidget.h  kmcpclientinspectorresourcetemplateswidget.cpp  kmcpclientinspectorresourcetemplateswidget.h
src/widgets/autotests/: CMakeLists.txt  kmcpclientinspectorconnectbuttonswidgettest.cpp  kmcpclientinspectorconnectbuttonswidgettest.h  kmcpclientinspectorlisttoolswidgettest.cpp  kmcpclientinspectorlisttoolswidgettest.h  kmcpclientinspectorserversettingswidgettest.cpp  kmcpclientinspectorserversettingswidgettest.h  kmcpclientinspectortreeviewtest.cpp  kmcpclientinspectortreeviewtest.h
src/widgets/configure/: kmcpclientinspectorconfiguremcpserverswidget.cpp  kmcpclientinspectorconfiguremcpserverswidget.h  kmcpclientinspectorconfiguresettingsdialog.cpp  kmcpclientinspectorconfiguresettingsdialog.h
src/widgets/icons/: CMakeLists.txt
src/widgets/settings/: kmcpclientinspectorglobalconfig.kcfg  kmcpclientinspectorglobalconfig.kcfgc
